# hello

./: .gitignore  Doxyfile  README.md  SConstruct  test
client/: DAW UI.html  daw_ui.html  piano_roll.html  piano_roll3.html  piano_roll5.html  piano_roll_background.pdn
core/: BadFlowException.cpp  BadFlowException.h  Beat.cpp  Beat.h  Beat_py.cpp  Config.cpp  Config.h  Instrument.cpp  Instrument.h  LocalPlayer_py.cpp  Note.cpp  Note.h  Offset.h  Offset_py.cpp  Packet.cpp  Packet.h  Player.cpp  Player.h  Player_py.cpp  SConscript  SConstruct  Sample.cpp  Sample.h  Sample_py.cpp  VorbisPlayer_py.cpp  WaveGenerator.cpp  WaveGenerator.h  WaveSynth.cpp  WaveSynth.h  chromatic.py  core_py.cpp  global.cpp  global.h  note_core.cpp  prelude.py
core/demos/: chromatic.cpp  prelude.cpp
core/src/: BadFlowException_py.cpp  Instrument.cpp  Instrument.h  LocalPlayer.cpp  LocalPlayer.h  Offset.cpp  Player.cpp  Player.h  Player_py.cpp  SConscript  VorbisPlayer.cpp  VorbisPlayer.h  WaveSynth.cpp  WaveSynth.h  WaveSynth_py.cpp  global.h  note_core.cpp
core/tests/: Note_test.cpp
djnote/: manage.py  sqlite3.db  wsgi.py
html jquery stuff/: piano_roll.html
note/: settings.py  urls.py
project_view/: forms.py  models.py  urls.py  views.py
sampler/: SConscript
server/gstreamer/: CMakeLists.txt  Jamroot  Makefile  Makefile.bak  Makefile.old  SConstruct  boost-build.jam  hello_gstreamer  hello_gstreamer.cpp  hello_gstreamer.py  main.cpp  player.cpp  player.h  test  test.cpp  test.py
server/gstreamer/cmake/Modules/: FindGStreamer.cmake
test_stream/: models.py  urls.py  views.py
(+78 files in other folders)
